--- a/app/src/main/res/layout/custom_tab.xml
+++ b/app/src/main/res/layout/custom_tab.xml
@@ -1,24 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/com.example.rafaelaaraujo.customTabAndroid.adapter">
 
-    <TextView
-        android:id="@+id/title_tab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textAllCaps="true"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="15px" />
+    <data>
 
-    <View
-        android:id="@+id/triangle"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/triangle_closed"
-        android:visibility="gone" />
+        <variable
+            name="state"
+            type="String" />
 
-</FrameLayout>
+        <variable
+            name="position"
+            type="int" />
+    </data>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/title_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAllCaps="true"
+            android:textSize="15dp"
+            app:monthString="@{position}"
+            app:changeTextBackground="@{state}"
+            />
+
+        <View
+            android:id="@+id/triangle"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"
+            app:changeBackground="@{state}"
+            />
+
+    </FrameLayout>
+</layout>
